# solana-poseidon-syscall-example

./: Anchor.toml  Cargo.toml
programs/poseidon/: Cargo.toml
programs/poseidon/src/: lib.rs
