[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-frozen-abi = { path = "../solana/frozen-abi" }
solana-program = { path = "../solana/sdk/program" }
